2012-12-08  Harry Metske <metskem@apache.org>

       * 2.9.1-svn-4
       
       * fixed JSPWIKI-754 Have PageViewPlugin work with page renames (thanks to Glen Mazza)
       
2012-12-06  Juan Pablo Santos (juanpablo AT apache DOT org)

       * 2.9.1-svn-3
       
       * Added generics to WikiPlugin.execute( WikiContext, Map< String, String > ) 
       and propagated the change to all plugins. Cfr. with UPGRADING document for details.
       
2012-12-02   Harry Metske <metskem@apache.org>
       
       * 2.9.1-svn-2
       
       * fixed JSPWIKI-753 Consolidate TestEngine.deleteTestPage to single, non-static method (thanks to Glen Mazza)

2012-12-02   Harry Metske <metskem@apache.org>
       
       * 2.9.1-svn-1
       
       * fixed JSPWIKI-665 Page View Plugin and page renames and deletions (thanks to Glen Mazza)
       
 2012-11-22  Florian Holeczek (florianh AT apache DOT org)

       * version switch to 2.9.1-svn-0

2012-11-17  Juan Pablo Santos (juanpablo AT apache DOT org)

       * JSPWIKI-751: deleted guitests target
       
       * Upgraded Sonar Ant Tasks to 2.0

2012-11-01  Florian Holeczek (florianh AT apache DOT org)

       * 2.9.0-incubating (preparing release)
       
       * added generation of .sha1 checksum files

2012-10-30  Florian Holeczek (florianh AT apache DOT org)

       * moved doc/aaa-diagram.graffle to project management area

2012-10-28  Florian Holeczek (florianh AT apache DOT org)

       * 2.9.0-incubating-14

       * JSPWIKI-750: PageViewPluginTest is failing very often when using a JDK 7
       
       * minor documentation and logging fixes to PageViewPlugin

2012-10-22  Florian Holeczek (florianh AT apache DOT org)

       * several small fixes and improvements related to building and licensing stuff

2012-10-22  Florian Holeczek (florianh AT apache DOT org)

       * 2.9.0-incubating-13
       
       * fixed CommentedPropertiesTest, which broke because of the recent license header changes
